# colorspace

./: CMakeLists.txt  CTestConfig.cmake  NDK_all.sh  build_NDK_cmake.sh  build_x86_cmake.sh  colorspace.c  colorspace.h
CMAKE/: CheckCOLORSPACECompilerFlags.cmake  colorspace-config-build.cmake.in  colorspace-config-install.cmake.in  colorspace-config-version.cmake.in
